Fix copyright years and fix some list copying issues in JavaSource.